Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-15950

LOAD DATA INTO compex_view crashed

    XMLWordPrintable

Details

    Description

      CREATE OR REPLACE TABLE t1 (a INT, b INT, PRIMARY KEY (a), UNIQUE(b));
      INSERT INTO t1 VALUES (1,1);
      CREATE OR REPLACE TABLE t2 (c INT);
      CREATE OR REPLACE VIEW v AS SELECT t1.* FROM t1 JOIN t2;
      SELECT a, b FROM t1 INTO OUTFILE '15645.data';
      LOAD DATA INFILE '15645.data' IGNORE INTO TABLE v (a,b);
      LOAD DATA INFILE '15645.data' REPLACE INTO TABLE v (a,b);
      

      (gdb) bt
      #0  __GI_raise (sig=sig@entry=6) at raise.c:51
      #1  __GI_abort () at abort.c:90
      #2  __assert_fail_base (fmt=<optimized out>, assertion=assertion@entry=0x1633a98 "table", file=file@entry=0x14ac53f "/work/mariadb/sql/sql_base.cc", line=line@entry=1010, function=function@entry=0x14ae051 "TABLE_LIST *find_dup_table(THD *, TABLE_LIST *, TABLE_LIST *, bool)") at assert.c:92
      #3  __GI___assert_fail (assertion=0x1633a98 "table", file=0x14ac53f "/work/mariadb/sql/sql_base.cc", line=1010, function=0x14ae051 "TABLE_LIST *find_dup_table(THD *, TABLE_LIST *, TABLE_LIST *, bool)") at assert.c:101
      #4  find_dup_table (thd=0x7fffa0000ce8, table=0x0, table_list=0x7fffa0016d18, check_alias=false) at sql_base.cc:1010
      #5  unique_table (thd=0x7fffa0000ce8, table=0x7fffa0014138, table_list=0x7fffa0016d18, check_alias=false) at sql_base.cc:1139
      #6  mysql_load (thd=0x7fffa0000ce8, ex=0x7fffa00140b0, table_list=0x7fffa0014138, fields_vars=List<Item> with 2 elements, set_fields=List<Item> with 0 elements, set_values=List<Item> with 0 elements, handle_duplicates=DUP_ERROR, ignore=true, read_file_from_client=false) at sql_load.cc:421
      #7  mysql_execute_command (thd=0x7fffa0000ce8) at sql_parse.cc:5122
      #8  mysql_parse (thd=0x7fffa0000ce8, rawbuf=0x7fffa0013fc0 "LOAD DATA INFILE '15645.data' IGNORE INTO TABLE v (a,b)", length=55, parser_state=0x7fffedca0400, is_com_multi=false, is_next_command=false) at sql_parse.cc:8001
      #9  dispatch_command (command=COM_QUERY, thd=0x7fffa0000ce8, packet=0x7fffa000ab19 "LOAD DATA INFILE '15645.data' IGNORE INTO TABLE v (a,b)", packet_length=55, is_com_multi=false, is_next_command=false) at sql_parse.cc:1845
      #10 do_command (thd=0x7fffa0000ce8) at sql_parse.cc:1390
      #11 do_handle_one_connection (connect=0x2c96bb8) at sql_connect.cc:1402
      #12 handle_one_connection (arg=0x2c96bb8) at sql_connect.cc:1308
      #13 pfs_spawn_thread (arg=0x2ca3858) at pfs.cc:1862
      #14 start_thread (arg=0x7fffedca1700) at pthread_create.c:465
      #15 clone () at clone.S:95
      

      Attachments

        Issue Links

          Activity

            People

              varun Varun Gupta (Inactive)
              kevg Eugene Kosov (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 4.75d
                  4.75d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.