MDEV-15950 LOAD DATA INTO compex_view crashed

INSERT ... SELECT chooses one of VIEWs underlying tables in a join list to insert.
LOAD DATA is similar but doesn't perform that step. This patch fixes it.